Balintag, Leonor part 2 final exam

--- a/index.html
+++ b/index.html
@@ -4,32 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <style>
-        .body {
-           margin: 0;
-           padding: 0;
-           display: flex;
-           flex-direction: column; 
-        }
-        .header, footer {
-            background-color: aqua;
-            color: black;
-        }
-        .nav{
-            background-color: aquamarine;
-            color: black;
-        }
-        .main{
-            flex: 1;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-    </style>
-    <header>Exam</header>
+    <header>
+        <p>Final Exam</p>
+    </header>
     <nav>
         <ul>
             <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci omnis perspiciatis aspernatur, illo rerum architecto excepturi non porro inventore animi pariatur delectus laboriosam odio error. Aspernatur accusantium consequatur pariatur quis!</li>
